--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -1,10 +1,10 @@
-# A basic syntax highlighting file for the nano (version 4.8 or above) editor.
+# A basic syntax highlighting file for the nano 2.3.1 editor.
 # To enable, edit ~/.nanorc (create it if it does not exist) and make sure it has the line
 # include /path/to/this/file/qdl.nanorc
-#  
+#
 syntax "QDL" "\.qdl$"
 magic "QDL "
-comment "//"
+# comment "//"
 
 
 # built functions
