Part of documentation did not get committed last time. Added a test. Updated nano configurations.

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -10,6 +10,23 @@ magic "QDL "
 # built functions
 
 color ,green "[[:space:]]+$"
+color brightyellow "acos"
+color brightyellow "acosh"
+color brightyellow "asin"
+color brightyellow "asinh"
+color brightyellow "atan"
+color brightyellow "atanh"
+color brightyellow "cos"
+color brightyellow "cosh"
+color brightyellow "exp"
+color brightyellow "ln"
+color brightyellow "log"
+color brightyellow "nroot"
+color brightyellow "pi"
+color brightyellow "sin"
+color brightyellow "sinh"
+color brightyellow "tan"
+color brightyellow "tanh"
 color brightyellow "abs"
 color brightyellow "box"
 color brightyellow "break"
