Fixes for CIL-1012, CIL-1002

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -121,9 +121,30 @@ color brightyellow "vdecode"
 color brightyellow "vencode"
 color brightyellow "vfs_mount"
 color brightyellow "vfs_unmount"
+color brightred "∅"
+color brightred "⟦"
+color brightred "⟧"
+color brightred "→"
+color brightred "×"
+color brightred "÷"
+color brightred "≤"
+color brightred "≥"
+color brightred "≡"
+color brightred "≠"
+color brightred "≈"
+color brightred "¬"
+color brightred "⋀"
+color brightred "⋁"
+color brightred "≔"
+color brightred "≕"
+color brightred "⊨"
+color brightred "⊥"
+color brightred "⊤"
+color brightred "¯"
+color brightred "⁺"
 
 # keywords
-color red "\<(module|define|body|[|]|catch|continue|do|else|if|return|switch|try|while)\>"
+color red "\<(module|block|assert|define|body|[|]|catch|continue|do|else|if|return|switch|try|while)\>"
 color red "\<(true|false|null)\>"
 # Strings and numbers
 color brightcyan "'[^']*'"
