Few tweaks to parser and the terminal. Added query for current terminal to workspace.

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -13,9 +13,11 @@ color ,green "[[:space:]]+$"
 color brightyellow "abs"
 color brightyellow "acos"
 color brightyellow "acosh"
+color brightyellow "all_keys"
 color brightyellow "append"
 color brightyellow "asin"
 color brightyellow "asinh"
+color brightyellow "axis"
 color brightyellow "atan"
 color brightyellow "atanh"
 color brightyellow "box"
@@ -136,6 +138,7 @@ color brightyellow "vencode"
 color brightyellow "vfs_mount"
 color brightyellow "vfs_unmount"
 color brightred "π"
+color brightred "α"
 color brightred "⌈"
 color brightred "⌊"
 color brightred "∅"
