--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -13,7 +13,6 @@ color ,green "[[:space:]]+$"
 color brightyellow "abs"
 color brightyellow "acos"
 color brightyellow "acosh"
-color brightyellow "all_keys"
 color brightyellow "append"
 color brightyellow "asin"
 color brightyellow "asinh"
@@ -128,6 +127,7 @@ color brightyellow "to_string"
 color brightyellow "to_upper"
 color brightyellow "to_uri"
 color brightyellow "tokenize"
+color brightyellow "transpose"
 color brightyellow "trim"
 color brightyellow "unbox"
 color brightyellow "union"
@@ -138,7 +138,7 @@ color brightyellow "vencode"
 color brightyellow "vfs_mount"
 color brightyellow "vfs_unmount"
 color brightred "π"
-color brightred "α"
+color brightred "τ"
 color brightred "⌈"
 color brightred "⌊"
 color brightred "∅"
