Tiny tweaks getting ready for 5.2.2

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -164,6 +164,7 @@ color brightred "⊥"
 color brightred "⊤"
 color brightred "¯"
 color brightred "⁺"
+color brightred "⊗"
 
 # keywords
 color red "\<(module|block|assert|define|body|[|]|catch|continue|do|else|if|return|switch|try|while)\>"
