--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -175,3 +175,5 @@ icolor yellow "\b(([1-9][0-9]+)|0+)\.[0-9]+\b" "\b[1-9][0-9]*\b" "\b0[0-7]*\b" "
 # comments:
 color brightgreen "//.*"
 color brightgreen start="^\s*/\*" end="\*/"
+# Function and module documentation
+color brightblue ">>.*"
