More usability for WS

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -136,6 +136,7 @@ color brightyellow "vdecode"
 color brightyellow "vencode"
 color brightyellow "vfs_mount"
 color brightyellow "vfs_unmount"
+color brightyellow "ws_macro"
 color brightred "π"
 color brightred "τ"
 color brightred "⌈"
