More set support tests. Found lots of cruft in the documents. re-ran the parser build.

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -126,6 +126,7 @@ color brightyellow "to_list"
 color brightyellow "to_lower"
 color brightyellow "to_number"
 color brightyellow "to_string"
+color brightyellow "to_set"
 color brightyellow "to_upper"
 color brightyellow "to_uri"
 color brightyellow "tokenize"
@@ -145,6 +146,9 @@ color brightred "τ"
 color brightred "⌈"
 color brightred "⌊"
 color brightred "∅"
+color brightred "∩"
+color brightred "∪"
+color brightred "∈"
 color brightred "⟦"
 color brightred "⟧"
 color brightred "→"
@@ -170,7 +174,7 @@ color brightred "⁺"
 color brightred "⊗"
 
 # keywords
-color red "\<(module|block|assert|define|body|[|]|catch|continue|do|else|if|then|return|switch|try|while)\>"
+color red "\<(module|block|local|assert|define|body|[|]|catch|continue|do|else|if|then|return|switch|try|while)\>"
 color red "\<(true|false|null)\>"
 # Strings and numbers
 color brightcyan "'[^']*'"
