--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -146,9 +146,13 @@ color brightred "τ"
 color brightred "⌈"
 color brightred "⌊"
 color brightred "∅"
+color brightred "∆"
+color brightred "\/"
+color brightred "/\"
 color brightred "∩"
 color brightred "∪"
 color brightred "∈"
+color brightred "∉"
 color brightred "⟦"
 color brightred "⟧"
 color brightred "→"
