--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -147,8 +147,8 @@ color brightred "⌈"
 color brightred "⌊"
 color brightred "∅"
 color brightred "∆"
-color brightred "\/"
-color brightred "/\"
+color brightred "\\/"
+color brightred "/\\"
 color brightred "∩"
 color brightred "∪"
 color brightred "∈"
@@ -182,6 +182,8 @@ color red "\<(module|block|local|assert|define|body|[|]|catch|continue|do|else|i
 color red "\<(true|false|null)\>"
 # Strings and numbers
 color brightcyan "'[^']*'"
+color  brightwhite "\{"
+color  brightwhite "\}"
 color yellow "\b(([1-9][0-9]+)|0+)\.[0-9]+\b" "\b[1-9][0-9]*\b" "\b0[0-7]*\b" "\b0x[1-9a-f][0-9a-f]*\b"
 # comments:
 color brightgreen "//.*"
