More house cleaning and pruning. Added more tests for sets and beefed up serialization test so it is not haphazard. Added a complete set of server mode regression tests.

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -155,6 +155,8 @@ color brightred "∈"
 color brightred "∉"
 color brightred "⟦"
 color brightred "⟧"
+color brightred "⊢"
+color brightred "|-"
 color brightred "→"
 color brightred "×"
 color brightred "÷"
