--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -187,5 +187,5 @@ color yellow "\b(([1-9][0-9]+)|0+)\.[0-9]+\b" "\b[1-9][0-9]*\b" "\b0[0-7]*\b" "\
 color brightgreen "//.*"
 color brightgreen start="^\s*/\*" end="\*/"
 # Function and module documentation
-color brightblue ">>.*"
+color brightblue "».*"
 
