CIL-1328 fix., Changed a character in a QDL operator.

--- a/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
+++ b/ncsa-qdl/src/main/resources/qdl.nanorc-2.3.1
@@ -156,7 +156,7 @@ color brightred "∉"
 color brightred "⟦"
 color brightred "⟧"
 color brightred "⊢"
-color brightred "|>"
+color brightred "|="
 color brightred "→"
 color brightred "×"
 color brightred "÷"
